src/parser.rs
use crate::ast::{BinaryOperator, Expr, Parameter, Program, Statement, UnaryOperator};
use crate::error::{self, ParseError};
use crate::token::{Position, Token, TokenType};
use std::iter::Peekable;

pub struct Parser<I>
where
    I: Iterator<Item = Token>,
{
    tokens: Peekable<I>,
    source: String,
    current_position: Position,
}

impl<I> Parser<I>
where
    I: Iterator<Item = Token>,
{
    pub fn new(tokens: I) -> Self {
        Self {
            tokens: tokens.peekable(),
            source: String::new(),
            current_position: Position::new(1, 1),
        }
    }

    pub fn new_with_source(tokens: I, source: String) -> Self {
        Self {
            tokens: tokens.peekable(),
            source,
            current_position: Position::new(1, 1),
        }
    }

    /// Peek at the next token
    fn peek(&mut self) -> Option<&Token> {
        self.tokens.peek()
    }

    /// Consume and return the next token
    fn advance(&mut self) -> Option<Token> {
        if let Some(token) = self.tokens.next() {
            self.current_position = token.position;
            Some(token)
        } else {
            None
        }
    }

    /// Skip newlines
    fn skip_newlines(&mut self) {
        while let Some(token) = self.peek() {
            if matches!(token.token_type, TokenType::Newline) {
                self.advance();
            } else {
                break;
            }
        }
    }

    /// Expect a specific token type
    fn expect(&mut self, expected: TokenType) -> Result<Token, ParseError> {
        match self.advance() {
            Some(token)
                if std::mem::discriminant(&token.token_type)
                    == std::mem::discriminant(&expected) =>
            {
                Ok(token)
            }
            Some(token) => {
                let expected_str = format!("{:?}", expected);
                let found_str = format!("{:?}", token.token_type);
                let suggestion = error::suggest_for_unexpected_token(&expected_str, &found_str);

                Err(ParseError::new(format!(
                    "Expected {:?}, found {:?}",
                    expected, token.token_type
                ))
                .with_position(token.position)
                .with_source(self.source.clone())
                .with_suggestion(suggestion))
            }
            None => Err(ParseError::new("Unexpected end of input")
                .with_position(self.current_position)
                .with_source(self.source.clone())
                .with_suggestion(
                    "File ended unexpectedly. Check for unclosed braces, parentheses, or brackets.",
                )),
        }
    }

    /// Create an error with a suggestion
    fn error_with_suggestion(
        &self,
        message: impl Into<String>,
        suggestion: impl Into<String>,
    ) -> ParseError {
        ParseError::new(message)
            .with_position(self.current_position)
            .with_source(self.source.clone())
            .with_suggestion(suggestion)
    }

    /// Parse the entire program
    pub fn parse(&mut self) -> Result<Program, ParseError> {
        let mut program = Program::new();

        self.skip_newlines();

        while self.peek().is_some() {
            let stmt = self.parse_statement()?;
            program.add_statement(stmt);
            self.skip_newlines();
        }

        Ok(program)
    }

    /// Parse a statement
    fn parse_statement(&mut self) -> Result<Statement, ParseError> {
        self.skip_newlines();

        match self.peek() {
            None => Ok(Statement::Empty),
            Some(token) => match &token.token_type {
                TokenType::Import => {
                    self.advance(); // consume 'import'

                    // Parse URL (string literal)
                    let url = match self.advance() {
                        Some(Token {
                            token_type: TokenType::String(s),
                            ..
                        }) => s,
                        _ => {
                            return Err(self.error_with_suggestion(
                                "Expected string literal (URL) after 'import'",
                                "Import syntax: import \"file://./module.j\" sha256 \"checksum\" as alias",
                            ));
                        }
                    };

                    // Expect 'sha256'
                    match self.advance() {
                        Some(Token {
                            token_type: TokenType::Sha256,
                            ..
                        }) => {}
                        _ => {
                            return Err(self.error_with_suggestion(
                                "Expected 'sha256' keyword after import URL",
                                "Import syntax: import \"file://./module.j\" sha256 \"checksum\" as alias",
                            ));
                        }
                    }

                    // Parse checksum (string literal)
                    let checksum = match self.advance() {
                        Some(Token {
                            token_type: TokenType::String(s),
                            ..
                        }) => s,
                        _ => {
                            return Err(self.error_with_suggestion(
                                "Expected string literal (SHA256 checksum) after 'sha256'",
                                "Import syntax: import \"file://./module.j\" sha256 \"checksum\" as alias",
                            ));
                        }
                    };

                    // Expect 'as'
                    match self.advance() {
                        Some(Token {
                            token_type: TokenType::As,
                            ..
                        }) => {}
                        _ => {
                            return Err(self.error_with_suggestion(
                                "Expected 'as' keyword after checksum",
                                "Import syntax: import \"file://./module.j\" sha256 \"checksum\" as alias",
                            ));
                        }
                    }

                    // Parse alias (identifier)
                    let alias = match self.advance() {
                        Some(Token {
                            token_type: TokenType::Identifier(name),
                            ..
                        }) => name,
                        _ => {
                            return Err(self.error_with_suggestion(
                                "Expected identifier after 'as'",
                                "Module alias must be a valid identifier, like: import \"...\" sha256 \"...\" as math",
                            ));
                        }
                    };

                    Ok(Statement::Import {
                        url,
                        checksum,
                        alias,
                    })
                }
                TokenType::For => {
                    self.advance(); // consume 'for'

                    // Parse loop variable
                    let variable = match self.advance() {
                        Some(Token {
                            token_type: TokenType::Identifier(name),
                            ..
                        }) => name,
                        _ => {
                            return Err(self.error_with_suggestion(
                                "Expected identifier after 'for'",
                                "Loop variable must be an identifier, like: for i in ...",
                            ));
                        }
                    };

                    // Expect 'in'
                    match self.advance() {
                        Some(Token {
                            token_type: TokenType::In,
                            ..
                        }) => {}
                        _ => {
                            return Err(self.error_with_suggestion(
                                "Expected 'in' after loop variable",
                                "For loops use the syntax: for variable in iterable { ... }",
                            ));
                        }
                    }

                    // Parse iterable expression
                    let iterable = self.parse_expression()?;

                    // Expect '{'
                    self.skip_newlines();
                    self.expect(TokenType::LeftBrace)?;

                    // Parse body
                    let body = self.parse_function_body()?;

                    // Expect '}'
                    self.expect(TokenType::RightBrace)?;

                    Ok(Statement::For {
                        variable,
                        iterable,
                        body,
                    })
                }
                TokenType::If => {
                    self.advance(); // consume 'if'

                    // Parse condition
                    let condition = self.parse_expression()?;

                    // Expect '{'
                    self.skip_newlines();
                    self.expect(TokenType::LeftBrace)?;

                    // Parse body
                    let body = self.parse_function_body()?;

                    // Expect '}'
                    self.expect(TokenType::RightBrace)?;

                    Ok(Statement::If { condition, body })
                }
                TokenType::Identifier(name) => {
                    let name = name.clone();
                    self.advance();

                    // Check if this is a definition/assignment or a function call
                    match self.peek() {
                        Some(Token {
                            token_type: TokenType::LeftBracket,
                            ..
                        }) => {
                            // Could be array indexing: arr[i] = value
                            self.advance(); // consume [
                            let index = self.parse_expression()?;
                            self.expect(TokenType::RightBracket)?;

                            // Check if this is an assignment
                            if let Some(Token {
                                token_type: TokenType::Equals,
                                ..
                            }) = self.peek()
                            {
                                self.advance(); // consume =
                                let value = self.parse_expression()?;
                                Ok(Statement::IndexAssignment {
                                    array: name,
                                    index,
                                    value,
                                })
                            } else {
                                // Not an assignment, treat as expression statement
                                let expr = Expr::Index {
                                    array: Box::new(Expr::Identifier(name)),
                                    index: Box::new(index),
                                };
                                Ok(Statement::ExpressionStatement(expr))
                            }
                        }
                        Some(Token {
                            token_type: TokenType::Colon,
                            ..
                        }) => {
                            // Typed assignment: n: BYTE = in()
                            self.advance(); // consume :
                            let type_expr = self.parse_type_expr()?;
                            self.expect(TokenType::Equals)?;
                            let value = self.parse_expression()?;
                            Ok(Statement::TypedAssignment {
                                name,
                                type_expr,
                                value,
                            })
                        }
                        Some(Token {
                            token_type: TokenType::Equals,
                            ..
                        }) => {
                            self.advance(); // consume =

                            // Parse the value (could be expression, tuple, or function definition)
                            let value = self.parse_expression()?;

                            // Check if this might be a function definition by looking for ->
                            // If we see ->, try to parse as function definition
                            if matches!(
                                self.peek(),
                                Some(Token {
                                    token_type: TokenType::Arrow,
                                    ..
                                })
                            ) {
                                // This looks like a function definition
                                // The value we parsed should be a tuple literal representing parameters
                                // Parse the rest of the function definition
                                self.advance(); // consume ->
                                self.expect(TokenType::LeftParen)?;
                                let returns = self.parse_parameters()?;
                                self.expect(TokenType::RightParen)?;
                                self.expect(TokenType::LeftBrace)?;
                                let body = self.parse_function_body()?;
                                self.expect(TokenType::RightBrace)?;

                                // Extract parameters from the tuple literal
                                let params = match value {
                                    Expr::TupleLiteral { fields } => {
                                        // Convert tuple fields to parameters
                                        fields
                                            .into_iter()
                                            .map(|(name, type_expr)| Parameter {
                                                name,
                                                type_expr: Some(type_expr),
                                            })
                                            .collect()
                                    }
                                    _ => {
                                        return Err(self.error_with_suggestion(
                                            "Function parameters must be a tuple",
                                            "Define parameters like: (x: INTEGER, y: INTEGER)",
                                        ));
                                    }
                                };

                                Ok(Statement::FunctionDefinition {
                                    name,
                                    params,
                                    returns,
                                    body,
                                })
                            } else {
                                // Regular assignment or definition
                                if name.chars().next().unwrap().is_uppercase() {
                                    Ok(Statement::Definition { name, value })
                                } else {
                                    Ok(Statement::Assignment { name, value })
                                }
                            }
                        }
                        Some(Token {
                            token_type: TokenType::LeftParen,
                            ..
                        }) => {
                            // Function call
                            self.advance(); // consume (
                            let args = self.parse_function_args()?;
                            self.expect(TokenType::RightParen)?;
                            Ok(Statement::ExpressionStatement(Expr::FunctionCall {
                                name,
                                args,
                            }))
                        }
                        _ => Err(ParseError::new(format!(
                            "Unexpected token after identifier '{}'",
                            name
                        ))),
                    }
                }
                _ => Err(ParseError::new("Expected identifier at start of statement")),
            },
        }
    }

    /// Parse function parameters
    fn parse_parameters(&mut self) -> Result<Vec<Parameter>, ParseError> {
        let mut params = Vec::new();

        // Check for empty parameters
        if let Some(Token {
            token_type: TokenType::RightParen,
            ..
        }) = self.peek()
        {
            return Ok(params);
        }

        loop {
            // Parse parameter name
            let name = match self.advance() {
                Some(Token {
                    token_type: TokenType::Identifier(n),
                    ..
                }) => n,
                _ => return Err(ParseError::new("Expected parameter name")),
            };

            // Check for type annotation
            let type_expr = if let Some(Token {
                token_type: TokenType::Colon,
                ..
            }) = self.peek()
            {
                self.advance(); // consume :
                Some(self.parse_type_expr()?)
            } else {
                None
            };

            params.push(Parameter { name, type_expr });

            match self.peek() {
                Some(Token {
                    token_type: TokenType::Comma,
                    ..
                }) => {
                    self.advance();
                }
                _ => break,
            }
        }

        Ok(params)
    }

    /// Parse a type expression (can include array types)
    fn parse_type_expr(&mut self) -> Result<Expr, ParseError> {
        if let Some(Token {
            token_type: TokenType::LeftBracket,
            ..
        }) = self.peek()
        {
            // Array type: [n]BYTE or [n: BYTE]BYTE or [2*n]BYTE
            self.advance(); // consume [

            // Check if this is a type-constrained size: [n: BYTE]
            let size = if let Some(Token {
                token_type: TokenType::Identifier(name),
                ..
            }) = self.peek()
            {
                let name = name.clone();
                self.advance(); // consume identifier

                // Check for colon (type constraint)
                if let Some(Token {
                    token_type: TokenType::Colon,
                    ..
                }) = self.peek()
                {
                    self.advance(); // consume :
                    let type_expr = self.parse_array_size_type_expr()?;
                    Expr::TypeConstrained {
                        name,
                        type_expr: Box::new(type_expr),
                    }
                } else {
                    // No colon, so it's just an identifier
                    // Put it back and parse as expression
                    // We need to parse the rest of the expression
                    let mut left = Expr::Identifier(name);

                    // Check for binary operators
                    while let Some(token) = self.peek() {
                        match &token.token_type {
                            TokenType::Plus
                            | TokenType::Minus
                            | TokenType::Star
                            | TokenType::Percent => {
                                let op = match &token.token_type {
                                    TokenType::Plus => BinaryOperator::Add,
                                    TokenType::Minus => BinaryOperator::Subtract,
                                    TokenType::Star => BinaryOperator::Multiply,
                                    TokenType::Percent => BinaryOperator::Modulo,
                                    _ => unreachable!(),
                                };
                                self.advance();
                                let right = self.parse_primary_expr()?;
                                left = Expr::BinaryOp {
                                    op,
                                    left: Box::new(left),
                                    right: Box::new(right),
                                };
                            }
                            TokenType::RightBracket => break,
                            _ => break,
                        }
                    }

                    left
                }
            } else {
                // Not an identifier, parse as regular expression
                self.parse_array_size_expr()?
            };

            self.expect(TokenType::RightBracket)?;
            let element_type = self.parse_type_expr()?;
            Ok(Expr::ArrayType {
                size: Box::new(size),
                element_type: Box::new(element_type),
            })
        } else {
            self.parse_expression()
        }
    }

    /// Parse an expression inside array size brackets (limited context)
    fn parse_array_size_expr(&mut self) -> Result<Expr, ParseError> {
        let mut left = self.parse_primary_expr()?;

        // Handle binary operators in array size context
        while let Some(token) = self.peek() {
            match &token.token_type {
                TokenType::Plus | TokenType::Minus | TokenType::Star | TokenType::Percent => {
                    let op = match &token.token_type {
                        TokenType::Plus => BinaryOperator::Add,
                        TokenType::Minus => BinaryOperator::Subtract,
                        TokenType::Star => BinaryOperator::Multiply,
                        TokenType::Percent => BinaryOperator::Modulo,
                        _ => unreachable!(),
                    };
                    self.advance();
                    let right = self.parse_primary_expr()?;
                    left = Expr::BinaryOp {
                        op,
                        left: Box::new(left),
                        right: Box::new(right),
                    };
                }
                TokenType::RightBracket => break,
                _ => break,
            }
        }

        Ok(left)
    }

    /// Parse a type expression in array size context (after colon)
    fn parse_array_size_type_expr(&mut self) -> Result<Expr, ParseError> {
        // In [n: BYTE] context, just parse identifier or set
        match self.peek() {
            Some(Token {
                token_type: TokenType::Identifier(name),
                ..
            }) => {
                let name = name.clone();
                self.advance();
                Ok(Expr::Identifier(name))
            }
            Some(Token {
                token_type: TokenType::LeftBrace,
                ..
            }) => {
                self.advance();
                self.parse_set_expr()
            }
            _ => Err(ParseError::new(
                "Expected type expression after ':'".to_string(),
            )),
        }
    }

    /// Parse function body (for now, just collect statements until closing brace)
    fn parse_function_body(&mut self) -> Result<Vec<Statement>, ParseError> {
        let mut body = Vec::new();
        self.skip_newlines();

        while let Some(token) = self.peek() {
            if matches!(token.token_type, TokenType::RightBrace) {
                break;
            }

            // Parse statements - try normal statement parsing first,
            // but if it starts with a non-identifier/non-keyword, treat as expression statement
            let stmt = if matches!(
                token.token_type,
                TokenType::Identifier(_) | TokenType::For | TokenType::If
            ) {
                self.parse_statement()?
            } else {
                // Treat as expression statement
                let expr = self.parse_expression()?;
                Statement::ExpressionStatement(expr)
            };

            body.push(stmt);
            self.skip_newlines();
        }

        Ok(body)
    }

    /// Parse function arguments
    fn parse_function_args(&mut self) -> Result<Vec<Expr>, ParseError> {
        let mut args = Vec::new();

        // Check for empty args
        if let Some(Token {
            token_type: TokenType::RightParen,
            ..
        }) = self.peek()
        {
            return Ok(args);
        }

        loop {
            args.push(self.parse_expression()?);

            match self.peek() {
                Some(Token {
                    token_type: TokenType::Comma,
                    ..
                }) => {
                    self.advance();
                }
                _ => break,
            }
        }

        Ok(args)
    }

    /// Parse an expression
    pub fn parse_expression(&mut self) -> Result<Expr, ParseError> {
        self.parse_binary_expr(0)
    }

    /// Parse binary expressions with precedence
    fn parse_binary_expr(&mut self, min_precedence: u8) -> Result<Expr, ParseError> {
        let mut left = self.parse_unary_expr()?;

        while let Some(token) = self.peek() {
            let (op, precedence) = match &token.token_type {
                TokenType::Minus => (BinaryOperator::Subtract, 1),
                TokenType::Plus => (BinaryOperator::Add, 1),
                TokenType::Star => (BinaryOperator::Multiply, 2),
                TokenType::Slash => (BinaryOperator::Divide, 2),
                TokenType::Percent => (BinaryOperator::Modulo, 2),
                TokenType::Caret => (BinaryOperator::Power, 3), // Higher precedence for power
                TokenType::DoubleEquals => (BinaryOperator::Equals, 0),
                TokenType::LessThan => (BinaryOperator::LessThan, 0),
                TokenType::GreaterThan => (BinaryOperator::GreaterThan, 0),
                TokenType::LessThanOrEqual => (BinaryOperator::LessThanOrEqual, 0),
                TokenType::GreaterThanOrEqual => (BinaryOperator::GreaterThanOrEqual, 0),
                TokenType::Ampersand => (BinaryOperator::And, 0),
                TokenType::Pipe => {
                    // Need to check if this is inside a set constraint
                    break;
                }
                _ => break,
            };

            if precedence < min_precedence {
                break;
            }

            self.advance(); // consume operator

            let right = self.parse_binary_expr(precedence + 1)?;

            left = Expr::BinaryOp {
                op,
                left: Box::new(left),
                right: Box::new(right),
            };
        }

        Ok(left)
    }

    /// Parse unary expressions (like -x)
    fn parse_unary_expr(&mut self) -> Result<Expr, ParseError> {
        match self.peek() {
            Some(Token {
                token_type: TokenType::Minus,
                ..
            }) => {
                self.advance(); // consume -
                let operand = self.parse_unary_expr()?; // Allow chaining: --x
                Ok(Expr::UnaryOp {
                    op: UnaryOperator::Negate,
                    operand: Box::new(operand),
                })
            }
            _ => self.parse_postfix_expr(),
        }
    }

    /// Parse postfix expressions (array indexing, slicing, field access, etc.)
    fn parse_postfix_expr(&mut self) -> Result<Expr, ParseError> {
        let mut expr = self.parse_primary_expr()?;

        loop {
            match self.peek() {
                Some(Token {
                    token_type: TokenType::LeftBracket,
                    ..
                }) => {
                    self.advance(); // consume [

                    // Check for slice starting with colon: array[:]
                    if let Some(Token {
                        token_type: TokenType::Colon,
                        ..
                    }) = self.peek()
                    {
                        self.advance(); // consume :

                        // Check if there's an end expression
                        let end = if matches!(
                            self.peek(),
                            Some(Token {
                                token_type: TokenType::RightBracket,
                                ..
                            })
                        ) {
                            None
                        } else {
                            Some(Box::new(self.parse_expression()?))
                        };

                        self.expect(TokenType::RightBracket)?;
                        expr = Expr::Slice {
                            array: Box::new(expr),
                            start: None,
                            end,
                        };
                    } else {
                        // Parse first expression (could be index or slice start)
                        let first = self.parse_expression()?;

                        // Check for colon (slice)
                        if let Some(Token {
                            token_type: TokenType::Colon,
                            ..
                        }) = self.peek()
                        {
                            self.advance(); // consume :

                            // Check if there's an end expression
                            let end = if matches!(
                                self.peek(),
                                Some(Token {
                                    token_type: TokenType::RightBracket,
                                    ..
                                })
                            ) {
                                None
                            } else {
                                Some(Box::new(self.parse_expression()?))
                            };

                            self.expect(TokenType::RightBracket)?;
                            expr = Expr::Slice {
                                array: Box::new(expr),
                                start: Some(Box::new(first)),
                                end,
                            };
                        } else {
                            // Regular indexing
                            self.expect(TokenType::RightBracket)?;
                            expr = Expr::Index {
                                array: Box::new(expr),
                                index: Box::new(first),
                            };
                        }
                    }
                }
                Some(Token {
                    token_type: TokenType::Dot,
                    ..
                }) => {
                    self.advance(); // consume .

                    // Expect field name
                    let field = match self.advance() {
                        Some(Token {
                            token_type: TokenType::Identifier(name),
                            ..
                        }) => name,
                        _ => return Err(ParseError::new("Expected field name after '.'")),
                    };

                    expr = Expr::FieldAccess {
                        object: Box::new(expr),
                        field,
                    };
                }
                _ => break,
            }
        }

        Ok(expr)
    }

    /// Parse primary expressions
    fn parse_primary_expr(&mut self) -> Result<Expr, ParseError> {
        match self.advance() {
            Some(Token {
                token_type: TokenType::Integer(n),
                ..
            }) => Ok(Expr::Integer(n)),
            Some(Token {
                token_type: TokenType::Character(c),
                ..
            }) => Ok(Expr::Character(c)),
            Some(Token {
                token_type: TokenType::LeftParen,
                ..
            }) => {
                // Could be a parenthesized expression or tuple literal
                // We need to look ahead to distinguish them

                // Check for empty tuple/parens
                if let Some(Token {
                    token_type: TokenType::RightParen,
                    ..
                }) = self.peek()
                {
                    self.advance();
                    return Ok(Expr::TupleLiteral { fields: Vec::new() });
                }

                // Check if this looks like a tuple: identifier followed by colon
                // We need to peek ahead to see if there's a pattern like "id:"
                let is_tuple = if let Some(Token {
                    token_type: TokenType::Identifier(_),
                    ..
                }) = self.peek()
                {
                    // We need to check if the next token after the identifier is a colon
                    // Since we can't easily peek 2 tokens ahead, we'll parse the identifier
                    // and check, then decide what to do
                    true // tentatively assume it might be a tuple
                } else {
                    false
                };

                if is_tuple {
                    // Parse first identifier
                    let first_id = match self.advance() {
                        Some(Token {
                            token_type: TokenType::Identifier(name),
                            ..
                        }) => name,
                        _ => unreachable!(),
                    };

                    // Check if followed by colon
                    if matches!(
                        self.peek(),
                        Some(Token {
                            token_type: TokenType::Colon,
                            ..
                        })
                    ) {
                        // It's a tuple! Parse it as such
                        self.advance(); // consume :
                        let first_value = self.parse_expression()?;
                        let mut fields = vec![(first_id, first_value)];

                        // Parse remaining fields
                        loop {
                            match self.peek() {
                                Some(Token {
                                    token_type: TokenType::Comma,
                                    ..
                                }) => {
                                    self.advance();
                                    // Allow trailing comma
                                    if matches!(
                                        self.peek(),
                                        Some(Token {
                                            token_type: TokenType::RightParen,
                                            ..
                                        })
                                    ) {
                                        break;
                                    }
                                    // Parse next field
                                    let field_name = match self.advance() {
                                        Some(Token {
                                            token_type: TokenType::Identifier(name),
                                            ..
                                        }) => name,
                                        _ => {
                                            return Err(ParseError::new(
                                                "Expected field name in tuple",
                                            ));
                                        }
                                    };
                                    self.expect(TokenType::Colon)?;
                                    let field_value = self.parse_expression()?;
                                    fields.push((field_name, field_value));
                                }
                                Some(Token {
                                    token_type: TokenType::RightParen,
                                    ..
                                }) => break,
                                _ => return Err(ParseError::new("Expected ',' or ')' in tuple")),
                            }
                        }

                        self.expect(TokenType::RightParen)?;
                        Ok(Expr::TupleLiteral { fields })
                    } else {
                        // Not a tuple, it's a parenthesized expression starting with an identifier
                        // We've already consumed the identifier, so we need to build an expression from it
                        let mut expr = Expr::Identifier(first_id);

                        // Continue parsing as a binary expression if there are operators
                        // We need to handle the rest of the expression inside the parens
                        loop {
                            match self.peek() {
                                Some(Token {
                                    token_type: TokenType::RightParen,
                                    ..
                                }) => {
                                    self.advance();
                                    return Ok(expr);
                                }
                                Some(Token { token_type, .. })
                                    if matches!(
                                        token_type,
                                        TokenType::Plus
                                            | TokenType::Minus
                                            | TokenType::Star
                                            | TokenType::Slash
                                            | TokenType::Percent
                                            | TokenType::DoubleEquals
                                            | TokenType::LessThan
                                            | TokenType::GreaterThan
                                            | TokenType::LessThanOrEqual
                                            | TokenType::GreaterThanOrEqual
                                            | TokenType::Ampersand
                                    ) =>
                                {
                                    // Parse as binary expression
                                    // We need to continue parsing the full expression
                                    // This is tricky because we've already parsed the left side
                                    // Let's just parse the rest as a binary expression
                                    let (op, _) = match token_type {
                                        TokenType::Plus => (BinaryOperator::Add, 1),
                                        TokenType::Minus => (BinaryOperator::Subtract, 1),
                                        TokenType::Star => (BinaryOperator::Multiply, 2),
                                        TokenType::Slash => (BinaryOperator::Divide, 2),
                                        TokenType::Percent => (BinaryOperator::Modulo, 2),
                                        TokenType::DoubleEquals => (BinaryOperator::Equals, 0),
                                        TokenType::LessThan => (BinaryOperator::LessThan, 0),
                                        TokenType::GreaterThan => (BinaryOperator::GreaterThan, 0),
                                        TokenType::LessThanOrEqual => {
                                            (BinaryOperator::LessThanOrEqual, 0)
                                        }
                                        TokenType::GreaterThanOrEqual => {
                                            (BinaryOperator::GreaterThanOrEqual, 0)
                                        }
                                        TokenType::Ampersand => (BinaryOperator::And, 0),
                                        _ => unreachable!(),
                                    };
                                    self.advance(); // consume operator
                                    let right = self.parse_postfix_expr()?;
                                    expr = Expr::BinaryOp {
                                        op,
                                        left: Box::new(expr),
                                        right: Box::new(right),
                                    };
                                }
                                _ => {
                                    return Err(ParseError::new(
                                        "Unexpected token in parenthesized expression",
                                    ));
                                }
                            }
                        }
                    }
                } else {
                    // Not starting with identifier, parse as regular parenthesized expression
                    let expr = self.parse_expression()?;
                    self.expect(TokenType::RightParen)?;
                    Ok(expr)
                }
            }
            Some(Token {
                token_type: TokenType::Identifier(name),
                ..
            }) => {
                // Check for qualified name (module::name)
                if let Some(Token {
                    token_type: TokenType::DoubleColon,
                    ..
                }) = self.peek()
                {
                    self.advance(); // consume ::

                    // Parse the name after ::
                    let qualified_name = match self.advance() {
                        Some(Token {
                            token_type: TokenType::Identifier(n),
                            ..
                        }) => n,
                        _ => {
                            return Err(self.error_with_suggestion(
                                "Expected identifier after '::'",
                                "Qualified names use the syntax: module::name",
                            ));
                        }
                    };

                    // Check for function call on qualified name
                    if let Some(Token {
                        token_type: TokenType::LeftParen,
                        ..
                    }) = self.peek()
                    {
                        self.advance(); // consume (
                        let args = self.parse_function_args()?;
                        self.expect(TokenType::RightParen)?;
                        Ok(Expr::FunctionCall {
                            name: format!("{}::{}", name, qualified_name),
                            args,
                        })
                    } else {
                        Ok(Expr::QualifiedName {
                            module: name,
                            name: qualified_name,
                        })
                    }
                }
                // Check for function call
                else if let Some(Token {
                    token_type: TokenType::LeftParen,
                    ..
                }) = self.peek()
                {
                    self.advance(); // consume (
                    let args = self.parse_function_args()?;
                    self.expect(TokenType::RightParen)?;
                    Ok(Expr::FunctionCall { name, args })
                } else {
                    Ok(Expr::Identifier(name))
                }
            }
            Some(Token {
                token_type: TokenType::LeftBrace,
                ..
            }) => self.parse_set_expr(),
            Some(Token {
                token_type: TokenType::LeftBracket,
                ..
            }) => {
                // [ is already consumed by the match
